@@ -6,23 +6,23 @@ DIST cdrtools-3.01a24.tar.bz2 2075400 SHA256 4d9907b84f5b65dc6ca278b6202b90b8eb6
 DIST cdrtools-3.01a27.tar.bz2 2079545 SHA256 71188d5a9ad61de440b07471e2612b937b5f9b456eae10efbdb012b6a9dfe3ca SHA512 bec2efd8989899cec58d39129f4bd8f0c42af34d65c575af48feea89a63c7eaf5064a885922730364879b325a9e0d6d78c2e3e7dc4ee5b06523da33f55333f72 WHIRLPOOL 5f722e7861452f6a216d9a4df9b5bd5c61b75056ba8503d1a489b42ce075bf24e469849f943bce180c46ce7030fdd1ce940a71fe7f17b2d585b6940c6abe87d9
 EBUILD cdrtools-3.01_alpha17.ebuild 5237 SHA256 dd3795acba623f8e9c80c3c3acf287cc2c60aed3bee9325fb07d9e6edbfee47a SHA512 42b48b0e10ea809e5645f4f401a489fa591d1d083d4d8b0467b524fde723e37eca2ba9d2673c37f81bf247d63e0c0b795a0b9c6639c0f661613a5a52edc7edb5 WHIRLPOOL ba4ee8a0fc4f76d73aa09356bc2901e638a47bd339dc1c288e746a6966e0a24f6985616459b9b80f8043d632e86a43f4cd9d1fd97c8b9867ccb47d575b6b3a7a
 EBUILD cdrtools-3.01_alpha24.ebuild 7984 SHA256 2b4ccd4846adace696efccfbfe09aa492efc44b088d358d528ff6ea0fe94bd42 SHA512 31114f6343206ae9c427004743e683ab279fc9f64d06a5d3869a80e325b73da86f3b3322c7e1823d27b84952a5e4e0924abf6dda8035953f961071425534d1b0 WHIRLPOOL a91d38c8b24007b8d2fd9aaa21711dbda7bdd1f00298960f09728c4c580a14885358c263ac7113c8a126b95680d8db10adf9c5293e331c5b14a029166c9a261c
-EBUILD cdrtools-3.01_alpha27.ebuild 7967 SHA256 ccffbabf1e66f5fdf000310241cdc1e51d4c6c680b9e48c530e2db5d2dfa7252 SHA512 978d0f05dbddf4c3789395f318798df02d6d91208a78e01e75e85c4b3b4f48552618d0d39ee7697be0067c807f797d5871bcb1f51e3b29e696b56559d255b7f0 WHIRLPOOL 6a0b43b7e95d2254a8c54d3e24b460b5c0aef8a277deef9968bb763dedcd31e3b29a3f2269898776eee06bdc5593b9cd846baf7550ca1bd9b54ad48091ce8318
-MISC ChangeLog 53909 SHA256 d441bf3f0555e766b6d5ce3d3a33f5530a6b7db4cb8e5f79046cda6252fb6399 SHA512 a40b29584d16285017932a7e9ec02852f82b4ded262f474d17738ecbf1ba548c25a49844271355ec9e05a88419609546646bc74d91e024a4d4a6ce2e52150b41 WHIRLPOOL c0154b64078f8226d69e1a91a0f1743bbf4b3632af8c5af0c9d3859224fff46fbf50c9c12c49cfa0c4055e1cc3a3fc3d9750921d144e7bdf49176f8cd84b7d17
+EBUILD cdrtools-3.01_alpha27.ebuild 8124 SHA256 027baa75aeac8030d93cdcdbc8e6c00b944128e98b1690693b0e7e67dc62c6f8 SHA512 71f27df28b01d2d9098396d6effe50942def9d92134d924a42793beaec8c6fe82c1514c121db2fd2588b8f972e0f10c3099e26beb8aa91058a1cbbeef450dfcb WHIRLPOOL 0ac30880af9529eb943aa8399ab5995bedef13f34a72b4b2cc30a2e91dbca46d50886fc8f3168c5cb68bc6c98ff1d5c28d1e6aa165961269eb4ec6d2a088ced8
+MISC ChangeLog 54060 SHA256 cc871744b448fd300c7301cc4f8fb1a53880f0e895dd60892c9efc4f7e68ea8d SHA512 f45b972ee363bea42af0a2a0706244ba56ec527834604e7661ff962893ac2a151634bff7bfce333da485e52c63ffbae6f6f29ad31c349a32e84ab03a7b911d43 WHIRLPOOL 4bde97e478bd34b1208e844f2f3ae8f10b21488d5b4837983296c95379f715dee35c41c1308f204981f6697821c9a747c0366387380816a0ec5a195a2b00a4ac
 MISC metadata.xml 507 SHA256 f1086372c5bae26f9438544c1102cbadc619718b163392cbe35f3b359560ef3b SHA512 77aef4353064a013d1944ee796b1a6cb9a8a60c698d53df46cac7be17c556d9a495c71b9578a536c61c429a0c87e894e962bdca9167bbc60522ef25aeab756a6 WHIRLPOOL 0771499480bc135391ab921f22aba47f9966b68c79083f29f9df8c185919b65422f69953cc876d7dca8a2af5539b85e0c592f4521f5b4034ca5cb6035dc7c28b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU7kYGAAoJEPGu1DbS6WIAuw0QAIU2xq9OlwcxSBr2PVcYZRo+
-z4U9/M8PrZ0/76SQby7Xf+qGWSsOodi/404z8OE68bV+v/ly3k5qlcdqra5vaFC8
-cvWpniPy4bzK/fsNZImIJQPbOcIej8j8NzirigJMDFrbwstIeI17fmCGjRUqp581
-2oCR27nScYaEMKTM0JtaniuakT7ojxkUxOpE7tqA44e+cjsyNvY9hPEYWbYRYZgf
-2FAnb7aU6x8YxyJhh8aAZ8EqRC3CTHYcL4JvRMjDB6JMGA9SZ2KdMtIJZlo8CiRE
-E72a6ZE8p68iYzhg7A20pXwkfef0r8Jn67G7MOV0wpiVzsHgwmLodX9uzJslyh+/
-WS6LK6EJmezT9SWCx4wQPP4fMnGEnewDgOed35w1HE9/w5AUTsf+UpXmuAFTFLN/
-pwHwdUwx3shAJJSaerJWsrPzPOZSMLeAAX0VJVomcL1HZM68WTPdb/KUyvitqctN
-ByoJbRVPebSFSUU95O7wLk8peYj5nBn99/rWZNra9ub3PwO45+C1ZIyrT0T11cTJ
-icragBgW7f8RBLnUdY6ZYDFvUJUV+XQT8l78SpMh9gFySd5xisyaYEBy2YrKpzXo
-gAXMOfSm4+G50hrb8Ng6LBm6DXAG2WFJfxueZOMHu+ovYXxmhx6ErdTW74wa3XKg
-OFKRDXGwdxh2gM85twQq
-=uhmx
+iQIcBAEBCAAGBQJU7krvAAoJEPGu1DbS6WIAq/0P/2lHe/bRb+gDQCdFgOvSgKm0
+LJ4BmJyK8yVvlB05z42Mes0RSHHGaLgyZB7FemVqZfwz3jjQx1TS1p+b10hXA0qq
+QBdqudtdwbUkj4hr7AZ7cPhSBtE0iaHRMfsg34GoWjjXdntjpzxQU4J9IqbZbRZ0
+LGMRlDub7QKMfWayOcNNVab5PhdKkmD7RrSenGNBUTDF/XxxxEOqQR+1pUeeEegF
+73oIQnRDuuD7JL+P9iRVJhD/UE0SQdkuV8G1YnPiYH7Jvx67OEvPOSrfi1PbRza7
+AUpQ8Ql4li9H4q5Ct2ILVh3Ygcp7zlf+OGVXugO10OkpUjABTVVDtDjvmsIqT+1a
+VM7IJFGXu1Ll2YwDRYD7gqGdN5hs9+EIUJX5Y95Su4sdqKDXEd+ZtHdbfraQUwiu
+Xu0XxskJjQLYuU0JdBHaJ4qkvIA0Vwz+pAq6GM19/5FBwvNTOD34KFHhZxK1gIlK
+HIWgnFnC4Zpai+coz92jpyH9tye3UcwDIHRGUF0bT2i66QOW0mbCK6F5x7eiciCZ
+6esrOblfDKnEM0mKWIEkhCDa+PaqH5fAJfuvW7VeM5zit8NZYSQSf9PqfpRtoK9e
+9FCGzfF/2dWniu59Q8BdLrqRNtQhLvK3apXFGti3xMpQtLxxzZNU7skbRr+RHJyL
+4wSAxgh2GyMwXEBFnbF+
+=bsSG
 -----END PGP SIGNATURE-----
